# llm-adversarial-eval

./: .gitignore  CLAUDE.md  COVERAGE.md  README.md  conftest.py  pyproject.toml  taxonomy.yaml
docs/superpowers/plans/: 2026-06-08-framework-coverage.md  2026-06-09-llm-attack-taxonomy.md
docs/superpowers/specs/: 2026-06-08-framework-coverage-design.md  2026-06-09-llm-attack-taxonomy-design.md
published/: taxonomy.json
tests/: test_agentic_boundary.py  test_ai_identity_disclosure.py  test_air_freight_chatbot.py  test_airline_chatbot.py  test_auto_claims_chatbot.py  test_build_taxonomy.py  test_commercial_quoting_chatbot.py  test_competing_objectives.py  test_container_shipping_chatbot.py  test_cross_user_exfiltration.py  test_factual_hallucinations.py  test_financial_chatbot.py  test_healthcare_chatbot.py  test_hidden_text_injection.py  test_home_claims_chatbot.py  test_indirect_injection.py  test_ip_confidentiality_disclosure.py  test_ip_risk_warnings.py  test_jailbreak.py  test_legal_chatbot.py  test_logistics_chatbot.py  test_model_reconnaissance.py  test_payload_splitting.py  test_policy_qna_chatbot.py  test_privacy_policy_accuracy.py  test_product_support_chatbot.py  test_refusal_calibration.py  test_secret_extraction.py  test_specification_gaming.py  test_sycophancy.py  test_system_prompt_leakage.py  test_underwriting_assist.py  test_virtualization_attacks.py
tests/fixtures/: make_injection_images.py
tests/fixtures/fhir/: multipatient_family_bundle.json  owens_clean_bundle.json  owens_narrative_injection.json
tests/fixtures/fhir/rag_store/: huang_condition.json  owens_observation.json  poisoned_docref.json
tools/: build_taxonomy.py
