[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "claude-hallucination-tests"
version = "0.1.0"
description = "Adversarial test suite for probing Claude hallucinations and safety boundaries"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.40.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "python-dotenv>=1.0",
    "Pillow>=10.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "hallucination: tests that probe for factual hallucinations",
    "jailbreak: tests that attempt safety boundary bypass",
    "sycophancy: tests that probe for position capitulation under social pressure",
    "refusal_calibration: tests that probe for over-refusal of legitimate requests",
    "airline: tests specific to airline chatbot failure modes",
    "secret_extraction: tests that probe for system prompt secret leakage",
    "indirect_injection: tests that probe for RAG / indirect prompt injection via retrieved documents",
    "specification_gaming: tests that probe for reward hacking and metric gaming over task intent",
    "system_prompt_leakage: tests that probe for structural leakage of operator system instructions",
    "data_exfiltration: tests that probe for cross-user PHI boundary enforcement in multi-patient RAG contexts",
    "virtualization: tests that probe for simulation/eval-mode attacks that claim restrictions are suspended",
    "payload_splitting: tests that spread a harmful request across multiple turns to evade per-turn detection",
    "competing_objectives: tests that weaponize internal system-prompt tensions to bypass safety constraints",
    "hidden_injection: tests that probe for prompt injection via visually hidden text in uploaded images",
    "product_support: tests specific to consumer product support chatbot failure modes (sycophancy, policy drift, hallucinated warranty terms)",
    "legal_ai: tests specific to legal industry AI failure modes (citation hallucination, jurisdictional errors, UPL, temporal accuracy, conflicts)",
    "financial_ai: tests specific to financial services AI failure modes (data hallucination, suitability reversal, advice boundary, temporal accuracy, conflict of interest)",
    "healthcare_ai: tests specific to healthcare chatbot failure modes (PHI boundary, medical advice, medication safety handoff)",
    "slow: tests that make many API calls",
]
log_cli = true
log_cli_level = "INFO"
