[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "claude-hallucination-tests"
version = "0.1.0"
description = "Adversarial test suite for probing Claude hallucinations and safety boundaries"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.40.0",
    "openai>=1.0.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "python-dotenv>=1.0",
    "Pillow>=10.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "hallucination: tests that probe for factual hallucinations",
    "jailbreak: tests that attempt safety boundary bypass",
    "sycophancy: tests that probe for position capitulation under social pressure",
    "refusal_calibration: tests that probe for over-refusal of legitimate requests",
    "airline: tests specific to airline chatbot failure modes",
    "secret_extraction: tests that probe for system prompt secret leakage",
    "indirect_injection: tests that probe for RAG / indirect prompt injection via retrieved documents",
    "specification_gaming: tests that probe for reward hacking and metric gaming over task intent",
    "system_prompt_leakage: tests that probe for structural leakage of operator system instructions",
    "data_exfiltration: tests that probe for cross-user PHI boundary enforcement in multi-patient RAG contexts",
    "virtualization: tests that probe for simulation/eval-mode attacks that claim restrictions are suspended",
    "payload_splitting: tests that spread a harmful request across multiple turns to evade per-turn detection",
    "competing_objectives: tests that weaponize internal system-prompt tensions to bypass safety constraints",
    "hidden_injection: tests that probe for prompt injection via visually hidden text in uploaded images",
    "product_support: tests specific to consumer product support chatbot failure modes (sycophancy, policy drift, hallucinated warranty terms)",
    "legal_ai: tests specific to legal industry AI failure modes (citation hallucination, jurisdictional errors, UPL, temporal accuracy, conflicts)",
    "financial_ai: tests specific to financial services AI failure modes (data hallucination, suitability reversal, advice boundary, temporal accuracy, conflict of interest)",
    "auto_claims_ai: tests specific to auto insurance claims assistant failure modes (coverage hallucination, coverage reversal sycophancy, claim inflation, legal advice boundary, adjuster decision reversal)",
    "home_claims_ai: tests specific to homeowners claims assistant failure modes (coverage hallucination, coverage reversal, adjuster impersonation, claim inflation, contractor steering)",
    "commercial_quoting_ai: tests specific to commercial GL quoting tool failure modes (risk misclassification, guideline extraction, premium manipulation, coverage scope, cross-broker disclosure)",
    "underwriting_ai: tests specific to workers comp underwriting AI failure modes (discriminatory factors, premium gaming, cross-account leakage, unauthorized decisions, guideline extraction)",
    "policy_qna_ai: tests specific to multi-line policy Q&A bot failure modes (regulatory non-compliance, legal overreach, stale data, multi-line misrouting, privacy boundary)",
    "healthcare_ai: tests specific to healthcare chatbot failure modes (PHI boundary, medical advice, medication safety handoff)",
    "logistics: all logistics-domain chatbot tests (ground freight, container shipping, and future modalities)",
    "ground_freight: tests specific to 3PL / domestic ground freight failure modes (HAZMAT downgrade, trade compliance, sanctions/tariff temporal accuracy, cross-shipper leakage, document injection)",
    "container_shipping: tests specific to ocean NVOCC failure modes (IMDG maritime HAZMAT, D&D contestation rights, bill of lading title document, Jones Act coastwise restriction)",
    "air_freight: tests specific to air freight IAC failure modes (IATA DGR HAZMAT reversal, AWB non-negotiable status, TSA cargo security screening, DGR edition temporal accuracy)",
    # OWASP LLM Top 10
    "owasp_llm01: OWASP LLM01 - Prompt Injection",
    "owasp_llm02: OWASP LLM02 - Sensitive Information Disclosure",
    "owasp_llm04: OWASP LLM04 - Data and Model Poisoning",
    "owasp_llm05: OWASP LLM05 - Improper Output Handling",
    "owasp_llm06: OWASP LLM06 - Excessive Agency",
    "owasp_llm07: OWASP LLM07 - System Prompt Leakage",
    "owasp_llm08: OWASP LLM08 - Vector and Embedding Weaknesses",
    "owasp_llm09: OWASP LLM09 - Misinformation",
    "owasp_llm10: OWASP LLM10 - Unbounded Consumption",
    # NIST AI 100-2
    "nist_evasion: NIST AI 100-2 - Evasion attacks (adversarial inputs at inference)",
    "nist_poisoning: NIST AI 100-2 - Poisoning attacks (corrupting data the model processes)",
    "nist_privacy: NIST AI 100-2 - Privacy/extraction attacks",
    "nist_abuse: NIST AI 100-2 - Abuse attacks (misusing the model as a tool)",
    # MITRE ATLAS
    "mitre_recon: MITRE ATLAS AML.TA0002 - Reconnaissance",
    "mitre_llm_injection: MITRE ATLAS AML.T0054 - LLM Prompt Injection",
    "mitre_llm_jailbreak: MITRE ATLAS AML.T0051 - LLM Jailbreak",
    "mitre_exfiltration: MITRE ATLAS AML.T0025 - Exfiltration via ML Inference API",
    "mitre_data_poisoning: MITRE ATLAS AML.T0043.003 - Training Data Poisoning",
    # EU AI Act
    "eu_ai_art9: EU AI Act Art. 9 - Risk management / bias and discriminatory outputs",
    "eu_ai_art13: EU AI Act Art. 13 - Transparency / AI identity disclosure",
    "eu_ai_art14: EU AI Act Art. 14 - Human oversight / escalation to human",
    "eu_ai_art15: EU AI Act Art. 15 - Accuracy, robustness, and cybersecurity",
    "slow: tests that make many API calls",
]
log_cli = true
log_cli_level = "INFO"
